@@ -32,8 +32,8 @@ public class ControversialRulesTest extends SimpleAggregatorTst {
         addRule(RULESET, "SuspiciousOctalEscape");
         addRule(RULESET, "UnnecessaryConstructor");
         addRule(RULESET, "UnnecessaryParentheses");
-        addRule(RULESET,"UseConcurrentHashMap");
-	addRule(RULESET, "UseObjectForClearerAPI");
+        addRule(RULESET, "UseConcurrentHashMap");
+        addRule(RULESET, "UseObjectForClearerAPI");
     }
 
     public static junit.framework.Test suite() {
